--- a/src/pages/homepage.css
+++ b/src/pages/homepage.css
@@ -10,13 +10,15 @@
   position: relative;
   z-index: 0;
   overflow: hidden;
-  
+}
 
+.welcome-div > p {
+  color: var(--color1);
 }
 
 .welcome-div a {
   text-decoration: none;
-  color: inherit;
+  color: var(--color2);
   pointer-events: auto;
 }
 
